Fixed shared lists overflowing

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -314,6 +314,10 @@ h1,h2,h3,h4,h5,h6{
   .logout {
     text-align: right;
   }
+
+  .column {
+    max-width: 100%;
+  }
 }
 
 .offline {
